# kmath

./: CMakeLists.txt  README.md  todo.md
include/kmath/: Constants.hpp  Ops.hpp  Trig.hpp  Utils.hpp
include/kmath/Matrix/: Eigen.hpp  Matrix.hpp  Vector.hpp
include/kmath/Matrix/QR/: GramSchmidtQR.hpp  QRDecomposition.hpp
src/Matrix/: Eigen.cpp  Matrix.cpp  Vector.cpp
src/Matrix/QR/: GramSchmidtQR.cpp
src/Ops/: Ops.cpp
src/Trig/: README.md  Trig.cpp
src/Utils/: Utils.cpp
test/: CMakeLists.txt
test/Matrix/: test.cpp  testEigen.cpp  testMatrix.cpp  testVector.cpp
test/Matrix/QR/: testGramSchmidtQR.cpp
test/Ops/: testOps.cpp
test/Trig/: testTrig.cpp
test/Utils/: testUtils.cpp
